fixed routing issue with registration form. Removed console logs

--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 REACT_APP_API_KEY=f3351697-5c01-49d6-bac5-0e21bae2b6c5
 REACT_APP_TOKEN_KEY=Bearer
-REACT_APP_API_ENDPOINT=https://mysterious-harbor-91391.herokuapp.com/api
+# REACT_APP_API_ENDPOINT=https://mysterious-harbor-91391.herokuapp.com/api
